2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_highlight_and_shade),
	(murrine_draw_button), (murrine_draw_entry),
	(murrine_draw_spinbutton_down), (murrine_scale_draw_gradient),
	(murrine_draw_optionmenu), (murrine_draw_menubar),
	(murrine_draw_frame), (murrine_draw_tab),
	(murrine_draw_list_view_header), (murrine_draw_toolbar),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_trough),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider),
	(murrine_draw_selected_cell), (murrine_draw_menu_frame),
	(murrine_draw_radiobutton), (murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_draw_highlight_and_shade),
	(murrine_rgba_draw_button), (murrine_rgba_draw_entry),
	(murrine_scale_draw_gradient),
	(murrine_rgba_draw_progressbar_trough),
	(murrine_rgba_draw_menubar), (murrine_rgba_draw_toolbar),
	(murrine_rgba_draw_frame), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_trough),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider), (murrine_rgba_draw_handle),
	(murrine_rgba_draw_radiobutton), (murrine_rgba_draw_checkbox),
	(murrine_rgba_draw_menu_frame):
	Polishing code - Part 1

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	* src/cairo-support.c (murrine_rounded_rectangle_closed):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_tab),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_tab), (murrine_rgba_draw_scrollbar_stepper):
	Less code, updated TODO

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_scrollbar_stepper):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_scrollbar_stepper):
	Speed improvement in buttons and scrollbar steppers rendering.
	Maybe unnoticeable but there is ;)

2008-09-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
